Imagem Docker para ambiente de Staging

--- a/src/Calculo/RS.Calculo.Api/RS.Calculo.Api.csproj
+++ b/src/Calculo/RS.Calculo.Api/RS.Calculo.Api.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>604a5c8a-d470-4ec2-86d2-4f6037d437e9</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
 	<ItemGroup>
