--- a/src/Taxa/RS.Taxa.Api/RS.Taxa.Api.csproj
+++ b/src/Taxa/RS.Taxa.Api/RS.Taxa.Api.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>f9be8324-d492-4921-bc17-faebf5e2e73c</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
